# autosentry

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
gifs/: readme.md
key_rc_test/: CMakeLists.txt  Key_RC.py  package.xml
key_rc_test/launch/: key_rc.launch
key_rc_test/src/key_rc_test/: Key_RC.py
localize/localize_startup/: CMakeLists.txt  package.xml
localize/localize_startup/launch/: base2odom.launch  ekf.launch  odom2map.launch  start.launch
localize/slam/spectacular_ai/: CMakeLists.txt  package.xml
localize/slam/spectacular_ai/include/spectacular_ai/: config.h  oakInterface.h  ros_bridge.h
localize/slam/spectacular_ai/launch/: main.launch  vio.launch
localize/slam/spectacular_ai/params/: vio.yaml
localize/slam/spectacular_ai/rviz/: odom.rviz
localize/slam/spectacular_ai/src/: config.cpp  main.cpp  oakInterface.cpp  ros_bridge.cpp
logic_control/: CMakeLists.txt  Logic_Control.py  PA.py  PB.py  PC.py  PD.py  PE.py  PF.py  package.xml
logic_control/launch/: logic_control.launch
navigation/depth2scan/: CMakeLists.txt  package.xml
navigation/depth2scan/launch/: both.launch  d2s.launch
navigation/move_controller/: CMakeLists.txt  package.xml
navigation/move_controller/launch/: move_base.launch
navigation/move_controller/params/: costmap_common.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml  map_server.yaml  teb_local_planner.yaml  teb_params_2.yaml
navigation/pcl2process/: CMakeLists.txt  package.xml
navigation/pcl2process/launch/: pcl2pro.launch
navigation/pcl2process/src/: pcl2process.cpp
navigation/project2plane/: CMakeLists.txt  package.xml
navigation/project2plane/launch/: both.launch
navigation/project2plane/src/: laserProjection.cpp
oak/oak_imu/: CMakeLists.txt  package.xml
oak/oak_imu/src/: main.cpp
robot/robot_driver/: CMakeLists.txt  package.xml
robot/robot_driver/include/robot_driver/: msg_serialize.h  serialPort.h
robot/robot_driver/include/robot_driver/msgSerializer/: callback_manager.h  check.h  header_process.h  listener.h  writer.h
robot/robot_driver/launch/: robot_driver.launch
robot/robot_driver/src/: main.cpp  serialPort.cpp
robot/robot_model/: CMakeLists.txt  package.xml
robot/robot_model/launch/: urdf.launch
robot/robot_model/urdf/: robot.urdf.xacro
robot_model/launch/: urdf.launch
robot_model/urdf/: robot.urdf.xacro
robot_model/urdf/include/: oak.urdf.xacro
robot_serial/: readme.md
robot_serial/msg/: aim.msg  armor.msg  armor_select.msg  dialSwitch.msg  exchange.msg  gimbal.msg  gimbalPRY.msg  kalman.msg  readme.md  spinning_control.msg
serial_referee/: CMakeLists.txt  package.xml
serial_referee/include/: check.h  uart.h
serial_referee/launch/: referee_serial.launch
serial_referee/msg/: message_game_HP.msg  message_game_command.msg  message_game_hurt.msg  message_game_status.msg
serial_referee/src/: referee_serial.cpp
slam/spectacular_ai/: CMakeLists.txt  download.cmake
slam/spectacular_ai/include/spectacular_ai/: config.h
slam/spectacular_ai/launch/: front.launch  main.launch  specAi.launch  urdf.launch  vio.launch
slam/spectacular_ai/rviz/: axesAndPC.rviz  odom.rviz
slam/spectacular_ai/src/: config.cpp  main.cpp
slam/spectacular_ai/urdf/: depthai_descr.urdf.xacro
slam/spectacular_ai/urdf/include/: oak.urdf.xacro
startup/: CMakeLists.txt  package.xml
startup/launch/: start.launch  test1.launch
startup/rviz/: axesAndPC.rviz  odom.rviz
swing_and_wander/: CMakeLists.txt  package.xml
